--- a/cv/Folio/index.html
+++ b/cv/Folio/index.html
@@ -53,10 +53,10 @@
         <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
 
         <ul class="nav-menu list-unstyled">
-          <li><a href="#header" class="smoothScroll">Home</a></li>
-          <li><a href="#about" class="smoothScroll">About</a></li>
+          <li><a href="#header" class="smoothScroll">Acueuil</a></li>
+          <li><a href="#about" class="smoothScroll">À propos de moi</a></li>
           <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
-          <li><a href="#journal" class="smoothScroll">Blog</a></li>
+          <li><a href="#journal" class="smoothScroll">Mes centres d'interet</a></li>
           <li><a href="#contact" class="smoothScroll">Contact</a></li>
         </ul>
 
@@ -104,7 +104,7 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">im a ux /ui designer austin based who loves clean, simple & unique design. i also enjoy crafting brand identities, icons, & ilustration work. </p>
+            <p class="p-heading">Je suis en formation de Référent Digital chez UP TO by Simplon. Le référent digital est la boite à outil d'une entreprise concernant le domaine du digital. De la connaissance sur le matériel, en passant par le réseau, les langages de programation, la communication, la mise en place de solution numérique pour un besoin particulier, il peut être sur tout les fronts et apporter son aide, son expertise, ses connaissances pour aider les entreprise dans l'univers du numérique et des problèmatique qui y sont liées. </p>
             <p class="separator">To an English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told me what Occidental is. The European languages are members of the same family.English person.</p>
 
           </div>
@@ -329,13 +329,13 @@
           <div class="col-lg-6">
             <div class="contact-contact">
 
-              <h2 class="mb-30">GET IN TOUCH</h2>
+              <h2 class="mb-30">Contactez-Moi</h2>
 
               <ul class="contact-details">
-                <li><span>23 Main, Street</span></li>
-                <li><span>New York, United States</span></li>
-                <li><span>+88 01912704287</span></li>
-                <li><span>example@example.com</span></li>
+                <li><span>40 route de Clermont</span></li>
+                <li><span>Villeveyrac</span></li>
+                <li><span>06-08-13-39-26</span></li>
+                <li><span>sonny.abric@gmail.com</span></li>
               </ul>
 
             </div>
